@@ -1169,7 +1169,7 @@ AP_DECLARE(int) ap_directory_walk(request_rec *r)
                 continue;
             }
 
-            if (ap_regexec(entry_core->r, r->filename, 0, NULL, AP_REG_NOTEOL)) {
+            if (ap_regexec(entry_core->r, r->filename, 0, NULL, 0)) {
                 continue;
             }
 
